syntax = "proto3";
import public "google/protobuf/timestamp.proto";
package models;
option go_package = "../models";

message GImg {
  string link = 1;
  string title = 2;
  string des = 3;
}

message YahooDsc {
  string title = 1;
  string des = 2;
}



message VersionInfo{
  google.protobuf.Timestamp CreateAt=1;
  string    Name = 2;
  string    FileName = 3;
  uint64 Count = 4;
  bool    DownPic  =5;
  bool UseG = 6;
  bool UseY = 7;
  bool UseB = 8;
  bool UseYT = 9;
  string    List = 10;// @gotags: json:"list"
  string    Article = 11;// @gotags: json:"article"
  int32 Option = 12; // @gotags: json:"option"

  int32 CategoryLink = 13; // @gotags: json:"category_link"
  int32 ProductLink = 14; // @gotags: json:"product_link"
  bool UseBigSitemap = 15; // @gotags: json:"use_big_sitemap"
  sitemap BigSitemap = 16; // @gotags: json:"big_sitemap"
  sitemap SubSitemap = 17; // @gotags: json:"sub_sitemap"
  external GoogleImg = 18; // @gotags: json:"google_imgs"
  bool Category = 19; // @gotags: json:"category"
  bool RandTemp = 20; // @gotags: json:"rand_temp"
  bool Paging = 21;// @gotags: json:"paging"
  bool Word = 22;// @gotags: json:"word"
}

message sitemap {
  int32 Size = 1; // @gotags: json:"size"
  int32 Option = 2; // @gotags: json:"option"
}

message external {
  int32 Size = 1; // @gotags: json:"size"
  int32 Option = 2; // @gotags: json:"option"
  int32 GroupSize = 3; // @gotags: json:"group_size"
}

/*
 map<uint64,Cate> Cates = 6; // @gotags: protobuf:"-" json:"-" storm:"-"
  repeated Cate Categories = 7; // @gotags: protobuf:"-" json:"-" storm:"-"
*/


message Product {
  uint64   ID = 1; // @gotags: storm:"id,increment"
  uint64   CateId = 2; // @gotags: storm:"index"
  string   Name = 3;
  string   Image = 4;
  uint64   DomainID = 5;
  string   Brand = 6;
  string   Price = 7;
  string   Specials = 8;
  repeated string Keywords = 9;
  string Link = 10;
}


message ProductInfo {
  string   Pid = 1;
  string   Model = 2;
  repeated string Images = 3;
  string   Description = 4;
  string   MTitle = 5;
  string   MKeywords = 6;
  string   MDescription = 7;
  repeated GImg GoogleImgs = 8;
  repeated YahooDsc YahooDesc = 9;
  repeated YahooDsc BingDesc = 10;
  repeated GImg Youtube = 11;
  repeated string Categories = 12;
}